[package]
name = "gheap"
version = "0.1.0"
authors = ["Andy Sizer <andysizer@gmail.com>"]
description = "A version of gheap, derived from BinaryHeap, that supports max, min, and custom-order heaps."
license = "MIT"
keywords = ["binary", "heap", "priority", "queue"]
categories = ["data-structures", "algorithms", ]
edition = "2018"


[dependencies]
compare = "0.1.0"
serde = { version = "1.0.116", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.57"
rand = "0.7"
