[package]
name = "gheap"
version = "0.1.0"
authors = ["Andy Sizer <andysizer@gmail.com>"]
description = "A version of gheap, derived from BinaryHeap, that supports max, min, and custom-order heaps."
license = "MIT"
keywords = ["binary", "heap", "priority", "queue"]
categories = ["data-structures", "algorithms", ]
edition = "2018"


[dependencies]
compare = "0.1.0"
serde = { version = "1.0.116", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.57"
rand = "0.7"
rand_distr = "0.3"
rand_core = "0.5"
paste = "1.0"
stdext = "0.2"
criterion = "0.3"
nix = "0.19"
sysinfo = "0.15"
page_size = "0.4"

[dependencies.binary-heap-plus]
path = "../binary-heap-plus-rs"

[[bench]]
name = "heap_benchmarks"
harness = false
